validator_derive/tests/compile-fail/length/equal_and_min_max_set.stderr
error: Invalid attribute #[validate] on field `s`: both `equal` and `min` or `max` have been set in `length` validator: probably a mistake
 --> $DIR/equal_and_min_max_set.rs:5:32
  |
5 |     #[validate(length(min = 1, equal = 2))]
  |                                ^^^^^^^^^
